complete csrf and authcontroller