@@ -11,12 +11,18 @@ public class PathConfig {
 
 	@Bean("publicPaths")
 	public List<String> publicPaths() {
-		return Arrays.asList("/swagger-ui/index.html", "/v3/api-docs/**", "/api/auth/login/public",
-				"/api/auth/register/public");
+		return Arrays.asList("/swagger-ui/index.html",
+				"/v3/api-docs/**",
+				"/api/contacts/public",
+				"/api/auth/login/public",
+				"/api/companies/public",
+				"/api/auth/register/public",
+				"/api/csrf-token/public");
 	}
 
 	@Bean("securePaths")
 	public List<String> securePaths() {
-		return Arrays.asList("/api/companies/public", "/api/contacts/public");
+		return List.of(
+				"/api/**");
 	}
 }
